--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <main></main>
     <script src="sketch.js"></script>
+    <script src="cell.js"></script>
     <script src="tile.js"></script>
   </body>
 </html>
