--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="p5.js"></script>
+  <head>    
     <meta charset="utf-8" />
     <title>Wave Function Collapse</title>
-    <style>
-      body {
-        background-color: #555;
-      }
-    </style>
-  </head>
+    <link rel="stylesheet" href="style.css">
 
-  <body>
-    <main></main>
-    <script src="sketch.js"></script>
+    <script src="p5.js"></script>
+    <script src="wfc.js"></script>
     <script src="cell.js"></script>
     <script src="tile.js"></script>
+  </head>
+
+  <body>    
   </body>
 </html>
